--- a/smart-calendar/src/app/features/calendar/event-dialog/event-dialog.scss
+++ b/smart-calendar/src/app/features/calendar/event-dialog/event-dialog.scss
@@ -1,5 +1,5 @@
-@import '../../../../assets/styles/variables.scss';
-@import '../../../../assets/styles/mixins.scss';
+@use '../../../../assets/styles/variables';
+@use '../../../../assets/styles/mixins';
 
 :host {
   display: block;
