--- a/smart-calendar/src/app/features/calendar/month-view/month-view.scss
+++ b/smart-calendar/src/app/features/calendar/month-view/month-view.scss
@@ -1,5 +1,5 @@
-@import '../../../../assets/styles/variables.scss';
-@import '../../../../assets/styles/mixins.scss';
+@use '../../../../assets/styles/variables';
+@use '../../../../assets/styles/mixins';
 
 .month-view {
   display: flex;
